[package]
name = "mcp7940n"
description = "A basic template for Rust projects"
version = "0.1.0"
edition = "2021"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/BroderickCarlin/template-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-rc.2"
chrono = {version = "0.4", default-features = false}
